--- a/banma/vue-banma/package.json
+++ b/banma/vue-banma/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "fastclick": "^1.0.6",
+    "swiper": "^4.5.0",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1"
