--- a/banma/vue-banma/package.json
+++ b/banma/vue-banma/package.json
@@ -11,11 +11,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "better-scroll": "^0.1.15",
     "fastclick": "^1.0.6",
+    "jsonp": "^0.2.1",
     "swiper": "^4.5.0",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.6",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2",
+    "vuex": "^2.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
