--- a/banma/vue-banma/package.json
+++ b/banma/vue-banma/package.json
@@ -8,11 +8,14 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "testServer": "nodemon testServer.js",
+    "test": "concurrently \"npm run testServer\" \"npm start\""
   },
   "dependencies": {
     "axios": "^0.16.2",
     "better-scroll": "^0.1.15",
+    "concurrently": "^4.1.0",
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
     "swiper": "^4.5.0",
